Making more functional

--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
     <title>Task2 Date</title>
 </head>
 <body>
+<a href="index.html"> Назад на первую страницу</a>
 
 <script src="script2.js"></script>
 </body>
