--- a/index3.html
+++ b/index3.html
@@ -5,6 +5,8 @@
     <title>Task 3 Math</title>
 </head>
 <body>
+<a href="index.html"> Назад на первую страницу</a>
+
 <script src="script3.js"></script>
 </body>
 </html>
