--- a/index4.html
+++ b/index4.html
@@ -5,6 +5,8 @@
     <title>Task 4</title>
 </head>
 <body>
+<a href="index.html"> Назад на первую страницу</a>
+
 <script src="script4.js"></script>
 </body>
 </html>
