--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script src="script.js"></script>
+<a href="index.html"> Назад на первую страницу</a>
+<script src="script1.js"></script>
 </body>
 </html>
